# application_insights_test

./: README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  telemetry.ts
frontend/src/api/: api.ts  base.ts
frontend/src/components/: LogAggregationComponent.tsx  Navbar.tsx
frontend/src/hooks/: useTrackPageView.ts
frontend/src/pages/: About.tsx  Home.tsx  LogAggregationPage.tsx  NotFound.tsx
